[update] burger-ingredients scrollbar size fixed

--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -1,7 +1,5 @@
 .header{
     background: var(--background);
-
-    flex: 0 1 auto;
 }
 
 .nav{
