--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -12,3 +12,7 @@
 .ingredients-groups{
     overflow-y: scroll;
 }
+
+.ingredients-groups::-webkit-scrollbar-track{
+    margin-bottom: 40px;
+}
