--- a/src/components/burger-ingredients/ingredients-group/ingredients-group.module.css
+++ b/src/components/burger-ingredients/ingredients-group/ingredients-group.module.css
@@ -9,4 +9,6 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+
+    row-gap: 32px;
 }
