--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,10 @@ code {
     monospace;
 }
 
+html{
+  height: 100%;
+}
+
 #root{
   height: 100%;
 }
